<resources>
    <string name="app_name">RememberNumbers</string>
    <string name="tap_to_start">Tap to show!</string>
    <string name="enter_you_number">Enter the number!</string>
    <string name="score">Score:</string>
    <string name="clear">Clear</string>
    <string name="ok">Ok</string>
    <string name="life">Life :</string>
    <string name="tap_to_start_text">Tap to start!</string>
    <string name="score_is">Your score : %1$s</string>
    <string name="highscore_is">Highscore : %1$s</string>
    <string name="game_current_score">"Score : %1$s "</string>
    <string name="game_current_life">"Life : %1$s "</string>
    <string name="cloud_question_text">Remember the number</string>
    <string name="enter_the_number">Enter the number!</string>
</resources>
